--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ What's changed in loggerhead?
 dev [future]
 ------------
 
+    - Remove ``start-loggerhead`` and ``stop-loggerhead`` which were already
+      deprecated. (John Arbash Meinel)
+
     - Syntax highlighting is no longer applied for files greater than 512K,
       reducing codebrowse.launchpad.net overloading.
       (Max Kanat-Alexander, #513044)
