--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-loggerhead (1.17+bzr426-1) UNRELEASED; urgency=low
+loggerhead (1.17+bzr424-1) unstable; urgency=low
 
   * Use source format version 3.
-  * New upstream snapshot.
   * Bump standards version to 3.8.4
+  * Use new upstream snapshot.
+   + Fixes import issues when running full Bazaar testsuite.
 
  -- Jelmer Vernooij <jelmer@debian.org>  Mon, 08 Feb 2010 01:17:39 +0100
 
