--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+loggerhead (1.17+bzr424-2) UNRELEASED; urgency=low
+
+  * debian/control:
+   - Recommend python-pygments to support syntax-highlighting. (LP: #607775)
+
+ -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Wed, 08 Sep 2010 20:37:34 -0400
+
 loggerhead (1.17+bzr424-1) unstable; urgency=low
 
   * Use source format version 3.
