--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ loggerhead (1.17+bzr424-2) UNRELEASED; urgency=low
 
   * debian/control:
    - Recommend python-pygments to support syntax-highlighting. (LP: #607775)
+   - Fix Vcs-Bzr field and add Vcs-Browser field.
 
- -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Wed, 08 Sep 2010 20:37:34 -0400
+ -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Wed, 08 Sep 2010 20:43:55 -0400
 
 loggerhead (1.17+bzr424-1) unstable; urgency=low
 
