--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-loggerhead (1.18-1) UNRELEASED; urgency=low
+loggerhead (1.18-1) unstable; urgency=low
 
+  [ Max Bowsher ]
   * New upstream release.
-   + Depends on bzr >= 1.17.
+   + Depends on bzr >= 1.17. Closes: #605653
   * Remove remnants of patching to use the system YUI, which actually broke
-    the use of YUI entirely. The Debian archive currently only contains YUI 2,
-    but loggerhead uses YUI 3. Therefore, embed YUI 3 as loggerhead upstream
-    does.
+    the use of YUI entirely. Loggerhead requires YUI 3, which is
+    not packaged yet. Until it is, include YUI.
 
- -- Max Bowsher <maxb@f2s.com>  Wed, 17 Nov 2010 00:54:58 +0000
+ -- Jelmer Vernooij <jelmer@debian.org>  Sat, 18 Dec 2010 14:43:23 +0100
 
 loggerhead (1.17+bzr429-1) unstable; urgency=low
 
