NEWS entry about bug #716152

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 What's changed in loggerhead?
 =============================
 
+1.19 [???]
+----------
+
+    - Merge the pqm changes back into trunk, after trunk was reverted to an old
+      revision. (John Arbash Meinel, #716152)
+
 1.18 [10Nov2010]
 ----------------
 
