Fix bug #716201 by suppressing body content when getting a HEAD request.
This adds some WSGI middleware that suppresses returning body content if a HEAD request
is received.

Note that we don't yet pass GET down to the lower levels, so they could still
decide whether they can do less work or not. We may want to make the standard BranchWSGIApp
do less work under those circumstances.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 What's changed in loggerhead?
 =============================
 
+1.19 [????]
+-----------
+
+    - HEAD requests should not return body content. This is done by adding
+      another wsgi middleware that strips the body when the REQUEST_METHOD is
+      HEAD. Note that you have to add the middleware into your pipeline, and
+      it does not decrease the actual work done.
+      (John Arbash Meinel, #716201)
+
 1.18 [10Nov2010]
 ----------------
 
