--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 What's changed in loggerhead?
 =============================
 
+1.19 [???]
+----------------
+
+    - If we get a HEAD request, there is no reason to expand the template, we
+      shouldn't be returning body content anyway.
+      (John Arbash Meinel, #716201, #716217)
+
+
 1.18 [10Nov2010]
 ----------------
 
