Update NEWS and __version__ for 1.18.1.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
 What's changed in loggerhead?
 =============================
 
+1.18.1 [24Mar2011]
+------------------
+
+    - Fix escaping of filenames in revision views.
+      (William Grant, #740142)
+
+    - Add missing import to loggerhead.trace, allowing start-loggerhead
+      to run when a log.roll config option is set.
+      (Max Kanat-Alexander, #673999)
+
+
 1.18 [10Nov2010]
 ----------------
 
