--- a/NEWS
+++ b/NEWS
@@ -55,6 +55,9 @@ NEXT
     - Make tz calculations consistent and use UTC in the UI everywhere we show
       a precise timestamp. (Robert Collins, #594591)
 
+    - Avoid crashing when viewing or annotating a non-existent file.
+      (William Grant, #728209)
+
 
 1.18.1 [24Mar2011]
 ------------------
