--- a/serve-branches.1
+++ b/serve-branches.1
@@ -5,7 +5,7 @@ loggerhead \- run a loggerhead server
 .B serve-branches
 [\fIoptions\fR] \fI<path>\fR
 .SH DESCRIPTION
-Loggerhead is a web viewer for projects in bazaar. It can be used to navigate 
+Loggerhead is a web viewer for projects in Breezy. It can be used to navigate 
 a branch history, annotate files, view patches, perform searches, etc. It's 
 heavily based on bazaar-webserve, which is itself based on hgweb for Mercurial.
 .PP
