--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ What's changed in loggerhead?
 
     - Port to Python 3. (Jelmer Vernooĳ)
 
+    - Serve-branches has been renamed to 'loggerhead-serve'. (Jelmer Vernooĳ)
+
     - Fixed weird icon in file lists (e.g. revision summaries) when a file or
       directory with a blank name was listed. (Cruz Bishop, #387337).
 
