Set line-height on <pre> elements in file views.
This fixes misaligned line numbers in some browsers, e.g. Firefox; I think
the browser was picking a different default line-height for empty vs.
non-empty lines.

--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,9 @@ NEXT
     - Add some more minor UI changes to do with rounded corners. (Cruz
       Bishop)
 
+    - Set line-height on <pre> elements in file views, fixing misaligned
+      line numbers in some browsers. (Colin Watson)
+
 1.18.2 [12Sep2012]
 ------------------
 
