Fix highlighting for large files
`hightlight` promised to return a list, but for Python 3 it returned the
`Map` type.

This has been fixed.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 What's changed in loggerhead?
 =============================
 
+unreleased
+----------
+
+    - Fix highlighting for large files. (Jürgen Gmach, #1966702)
+
 1.20.0
 ----
 
