--- a/NEWS
+++ b/NEWS
@@ -6,8 +6,8 @@ unreleased
 
     - Fix highlighting for large files. (Jürgen Gmach, #1966702)
 
-1.20.0
-----
+1.20.0 [18Jul2021]
+------------------
 
     - Port to Breezy (https://www.breezy-vcs.org/). (Jelmer VernooÄ³)
 
