--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ What's changed in loggerhead?
 unreleased
 ----------
 
-    - Fix highlighting for large files. (Jürgen Gmach, #1966702)
+    - Fix highlighting for large files. (JÃ¼rgen Gmach, #1966702)
 
 1.20.0 [18Jul2021]
 ------------------
