Back to development: 2.0.1.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 What's changed in loggerhead?
 =============================
 
+2.0.1
+-----
+
+    - Nothing yet.
+
 2.0.0 [19Aug2022]
 -----------------
 
