Fix Loggerhead version/revision display in templates.
Broken by the port to Chameleon.

--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ What's changed in loggerhead?
 2.0.1
 -----
 
-    - Nothing yet.
+    - Fix Loggerhead version/revision display in templates.
 
 2.0.0 [19Aug2022]
 -----------------
