Back to development: 2.0.2.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 What's changed in loggerhead?
 =============================
 
+2.0.2
+-----
+
+    - Nothing yet.
+
 2.0.1 [01Sep2022]
 -----------------
 
